--- a/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Resources/Info.plist
+++ b/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Resources/Info.plist
@@ -23,7 +23,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>TrainerHome</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>Login</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
